fixed missing ul tag in html and redid the code for the header in css as well since i was not able to achieve the stretch that i wanted now things are much closer but am not getting the light tan appear when you hover over the subnavbtns and the subnavcontent looks a bit strange but things are at least much easier to read through and theres less redundancy there is still some but for sure less

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -6,17 +6,12 @@ html, body {
     overflow-x: hidden;
   }
 
-#header01 {
-    /* max-width: 100vw; */
+header {
     display: flex;
-    align-items: center;
-    /* justify-content: flex-start; */
-    /* z-index: 94; */
-
+    align-items: stretch;
+    height: 120px;
 
   }
-
-  
 
   #homeLogoBtn {
     cursor: pointer;
@@ -39,121 +34,99 @@ justify-content: left;
 
   }
 
-  header .navbar {
-height: 100%;  }
-
-
 
   /* The navigation menu */
 .navbar {
-    overflow: visible;
-    background-color: white;
-    float: center;
-    padding-left: 5%;
-    height: 100%;
-    /* position: left; */
-    /* display: block; */
-  }
-  
-  /* Navigation links */
-  .navbar a {
-    float: left;
-    font-size: 18px;
-    color: #584743;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    list-style-type: none;
-    border-radius: 20px;
-  }
-  
-  /* The subnavigation menu */
-  .subnav {
-    position: relative;
-    display: inline-block;
-
-  }
-
-  .subnavbtn {
     background-color: white;
     border: none;
-    padding :16px;
-
-  }
-  
-  /* Subnav button */
-  .subnav .subnavbtn {
-    font-size: 18px;
-    border: none;
-    outline: none;
-    color: #584743;
-    padding:  14px 16px;
-    background-color: light tan;
-    font-family: inherit;
-    border-radius: 20px;
-    /* margin: 0; */
-  }
-  
-  /* Add a red background color to navigation links on hover */
-  .navbar a:hover, .subnav:hover .subnavbtn {
-    background-color: tan;
-    position:relative;
     height: 100%;
-    /* display:block; */
-  }
-  
-  /* Style the subnav content - positioned absolute */
-  .subnav-content {
-    display: none;
-    position: absolute;
-    background-color: white;
-    width: fit-content;
-    /* height: auto; */
-    /* z-index: 1000; */
-  }
-  
-  /* Style the subnav links */
-  .subnav-content a {
-    color: #584743;
-    padding: 12px 16px;
-    text-decoration: none;
-    width: 175px;
-    height: auto;
-
-    /* display: block; */
-  }
-  
-  /* Add a grey background color on hover */
-  .subnav-content a:hover {
-    background-color: #e4d2ba;
-    color: #584743;
-    height: 100px;
-    /* text-decoration: none; */
-  }
-  
-  /* When you move the mouse over the subnav container, open the subnav content */
-  .subnav:hover .subnav-content {
-    display: block;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    display: flex;
 
   }
 
-  ul {
-    list-style-type: none;
+  .navbar > ul {
+    display: flex;
     margin: 0;
     padding: 0;
-    /* wow, cannot believe that because this was set to hidden, that the drop down was getting cut off when it went past this element  */
-    overflow: visible;
+    list-style-type: none;
     background-color: white;
-    height: 100%;
-  }
-  
-.navPlacement {
-    float: left;
     height: 100%;
     
   }
 
+  .navbar > ul > li  {
+    height: 100%;
+    display: flex;
+    text-align: center;
+    align-items: center ;
+
+    /* position: relative; */
+  }
+
+  .navbar > ul > li > a {
+    display:flex;
+    color:#584743;
+    padding: 16px;
+    height: 100%;
+    text-decoration: none;
+    
+    align-items: center;
+  }
+
+  .navbar a:hover{
+    background-color: tan;
+    cursor: pointer;
+
+  }
+
+  /* subnav */
+ .navbar .subnav{
+    position:relative;
+
+}
+
+ .navbar .subnavbtn{
+    background-color: white;
+    color: #584743;
+    padding: 0px 16px 0px 16px;
+    font-size: 16px;
+    height: 100%;
+    border:none;
+    cursor:pointer;
+}
+
+.navbar .subnav-content {
+    display: none;
+    position: absolute;
+    list-style-type: none;
+    top:100%;
+  
+    background-color: white;
+    color:#584743;
+    min-width:200px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+}
+
+ .navbar.subnav-content a {
+    color: #584743;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.navbar .subnav .subnav-content a:hover {
+    background-color: light tan;
+}
+
+.navbar .subnav:hover .subnav-content{
+    display:block;
+    padding: 0px;
+}
+
+.navbar .subnav:hover .subnavbtn {
+    background-color:light tan;
+
+}
 
 
   .hero-section {
